<resources>

    <!--앱 이름-->
    <string name="label">혜윰</string>

    <!--hyeyum-->
    <string name="hyeyum_guide_order">번째 헤윰</string>

    <string name="hyeyum_emotion_tag_happy">기쁨</string>
    <string name="hyeyum_emotion_tag_sad">슬픔</string>
    <string name="hyeyum_emotion_tag_surprised">놀라움</string>
    <string name="hyeyum_emotion_tag_calm">무덤덤함</string>
    <string name="hyeyum_emotion_tag_jealousy">질투심</string>
    <string name="hyeyum_emotion_tag_pride">자부심</string>
    <string name="hyeyum_emotion_tag_despair">절망감</string>
    <string name="hyeyum_emotion_tag_grateful">감사함</string>
    <string name="hyeyum_emotion_tag_irritation">화남</string>
    <string name="hyeyum_emotion_tag_confidence">자신감</string>
    <string name="hyeyum_emotion_tag_regret">후회</string>
    <string name="hyeyum_emotion_tag_heroism">의협심</string>
    <string name="hyeyum_emotion_tag_compassion">연민</string>
    <string name="hyeyum_emotion_tag_fear">두려움</string>

    <string name="hyeyum_error_date">알 수 없는 날짜</string>

    <string name="hyeyum_test_order">n</string>
    <string name="hyeyum_test_date">20nn.nn.nn</string>
    <string name="hyeyum_test_information">n번째 혜윰 · 20nn.nn.nn</string>
    <string name="hyeyum_test_hyeyum">테스트 혜윰 테스트 헤윰 테스트 혜윰\n테스트 혜윰 테스트 헤윰 테스트 혜윰</string>

    <!--main.xml-->
    <string name="main_xml_guide_line1">어떤 혜윰이든 상관없어요.</string>
    <string name="main_xml_guide_line2">우리의 생각을 터놓아보아요.</string>
    <string name="main_xml_guide_line3a">이제</string>
    <string name="main_xml_guide_line3b">번째</string>
    <string name="main_xml_guide_line4">혜윰을 남겨볼까요?</string>

    <string name="main_xml_write_guide">새 혜윰</string>

    <!--main.class-->
    <string name="main_class_toast_keep">이 혜윰을 간직합니다.</string>
    <string name="main_class_toast_forget">이 혜윰을 잊습니다.</string>
    <string name="main_class_toast_cancel">빈 헤윰입니다. 이 혜윰은 저장되지 않습니다.</string>
    <string name="main_class_dialog_cancel_title">헤윰 작성 취소</string>
    <string name="main_class_dialog_cancel_message">지금 작성중인 혜윰이 있습니다. 정말 이 혜윰 작성을 취소하고 앱을 종료할까요?</string>
    <string name="main_class_dialog_cancel_positive">작성 취소</string>
    <string name="main_class_dialog_cancel_negative">계속 작성하기</string>

    <!--list.xml-->
    <string name="list_title">지금까지 남긴 혜윰이에요.</string>
    <string name="list_guide">혜윰들끼리 연결고리로 이을 수도, 잊은 혜윰도 꾹 눌러 회상할 수 있어요.</string>
    <string name="list_guide_loading">지난 혜윰들을 불러오고 있어요.</string>

</resources>